// SeaORM protobuf extension options
//
// These options are used to annotate protobuf messages and fields
// with SeaORM entity configuration.
//
// Usage:
//   import "seaorm/options.proto";
//
//   message User {
//     option (seaorm.message).table_name = "users";
//
//     int64 id = 1 [(seaorm.field).primary_key = true];
//     string email = 2 [(seaorm.field).unique = true];
//   }

syntax = "proto3";

package seaorm;

import "google/protobuf/descriptor.proto";

// Message-level options for SeaORM entity configuration
message MessageOptions {
  // The database table name (defaults to snake_case of message name)
  string table_name = 1;

  // Index definitions (e.g., "idx_email" or "idx_name_email:name,email")
  repeated string indexes = 2;

  // Skip this message (don't generate an entity)
  bool skip = 3;
}

// Field-level options for SeaORM column configuration
message FieldOptions {
  // Mark this field as the primary key
  bool primary_key = 1;

  // Enable auto-increment for this field
  bool auto_increment = 2;

  // Add a unique constraint
  bool unique = 3;

  // Mark this field as nullable (for proto3 where all fields are optional)
  bool nullable = 4;

  // Override the database column name
  string column_name = 5;

  // Explicit SeaORM column type (e.g., "Uuid", "Json", "Text")
  string column_type = 6;

  // Default value expression
  string default_value = 7;

  // Relations
  // Target entity name for has_one relation
  string has_one = 10;

  // Target entity name for has_many relation
  string has_many = 11;

  // Target entity name for belongs_to relation
  string belongs_to = 12;

  // Local foreign key column for belongs_to
  string belongs_to_from = 13;

  // Remote primary key column for belongs_to
  string belongs_to_to = 14;

  // Junction table name for many-to-many relations
  string has_many_via = 15;
}

// Extend google.protobuf.MessageOptions to add seaorm.message
extend google.protobuf.MessageOptions {
  MessageOptions message = 50000;
}

// Extend google.protobuf.FieldOptions to add seaorm.field
extend google.protobuf.FieldOptions {
  FieldOptions field = 50001;
}
